feat: title changed

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Tomya FE Task</title>
+    <title>CRUD REDUX TOOLKIT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
